--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.56",
     "@babel/core": "^7.0.0-beta.56",
+    "@babel/plugin-transform-runtime": "^7.0.0",
     "@babel/preset-env": "^7.0.0-beta.56",
     "babel-core": "^7.0.0-0",
     "babel-jest": "^23.4.2",
@@ -30,10 +31,10 @@
     "jest": "^23.4.2",
     "jest-cli": "^23.4.2",
     "jsdoc": "^3.5.5",
-    "jsdoc-to-markdown": "^4.0.1",
-    "regenerator-runtime": "^0.12.1"
+    "jsdoc-to-markdown": "^4.0.1"
   },
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
     "@zakkudo/fetch": "^0.0.8",
     "ajv": "^6.5.2"
   },
